update laporan harian

--- a/section/chapter8.tex
+++ b/section/chapter8.tex
@@ -159,3 +159,22 @@
 5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang \\ \hline
 \end{tabular}
 \end{table}
+
+
+\subsection{Laporan Harian Pekan ke-3}
+
+
+\begin{table}[htp]
+\caption{Laporan Harian Tanggal 25 Maret 2019}
+\label{tab:lh250319}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi & - \\ \hline
+2 & Produktifitas & Mengulang matakuliah, mengerjakan buku informatika \\
+3 & Integritas & able to merge/has no conflict \\ \hline
+4 & Disiplin & Jam Datang : 08.50 WIB \\
+ &  & Jam Pulang : 16.00 WIB \\ \hline
+5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang  \\ \hline
+\end{tabular}
+\end{table}
