--- a/section/chapter9.tex
+++ b/section/chapter9.tex
@@ -184,3 +184,18 @@
 5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang  \\ \hline
 \end{tabular}
 \end{table}
+
+\begin{table}[htp]
+\caption{Laporan Harian Tanggal 28 Maret 2019}
+\label{tab:lh280319}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi & - BukuInformatika/ DeepLearningComputerVision \\ \hline
+2 & Produktifitas & belajar  \\
+3 & Integritas & able to merge \\ \hline
+4 & Disiplin & Jam Datang : 09.00 WIB \\
+ &  & Jam Pulang : 13.00 WIB \\ \hline
+5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang  \\ \hline
+\end{tabular}
+\end{table}
