--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -1204,6 +1204,55 @@
 \item Mencuci gelas
 \item Membersihkan area depan IRC
 \end{enumerate}
+
+\item \textbf{Tugas Harian tanggal 01/04/2019}
+\begin{enumerate}
+\item Menambah materi mengenai Map File \#49
+\item Menambah materi mengenai MapServer dan Map File \#48
+\item Masuk kelas mata kuliah Pemrograman III
+\item Mengikuti pelatihan python flask
+\item Merekam dataset untuk EEG pada kondisi menggunakan sepeda motor
+\item Memeriksa revisi jurnal PROJEK II (Ajis Trigunawan 1164031 dan Wildan Khaustara W 1164058)
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai Map File \#49
+\item Menambah materi mengenai MapServer dan Map File \#48
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi mengenai Map File \#49
+\item Menambah materi mengenai MapServer dan Map File \#48
+\item Masuk kelas mata kuliah Pemrograman III
+\item Mengikuti pelatihan python flask
+\item Merekam dataset untuk EEG pada kondisi menggunakan sepeda motor
+\item Memeriksa revisi jurnal PROJEK II (Ajis Trigunawan 1164031 dan Wildan Khaustara W 1164058)
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.40
+\item Jam Keluar : 17.00
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
+\item Membersihkan area sidang IRC
+\item Mencuci gelas
+\item Membeli batre untuk jam dinding di IRC
+\end{enumerate}
 \end{enumerate}
 
 
