buku harian IRC

--- a/section/chapter3.tex
+++ b/section/chapter3.tex
@@ -236,6 +236,146 @@ No&Tanggal&Kegiatan\\
 &&DISIPLIN : Jam Datang 09:10 Jam Pulang 02:08\\
 &&LOYALITAS :-\\
 \hline
+5.&\multirow{2}{*}{22-03-2019}
+&DEDIKASI :-\\
+&&PRODUKTIF :-\\
+&&INTEGRITAS :-\\
+&&DISIPLIN : -\\
+&&LOYALITAS :-\\
+\hline
 \end{tabular}
 \label{table:contoh}
+\end{table}
+
+\begin{table}[h]
+\begin{center}
+\caption{Tabel Mingguan}
+\begin{tabular}{|c|l|}
+\hline
+Kategori& Sekor Nilai Kategori mingguan\\
+\hline
+Dedikasi & -\\
+\hline
+Produktif & -\\
+\hline
+Integritas & -\\
+\hline
+Disiplin & -\\
+\hline
+Loyalitas & -\\
+\hline
+\end{tabular}
+\end{center}
+\label {Tabel:contoh} 
+\end{table}
+
+\begin{table}[h]
+\caption{Tabel Kegiatan Harian minggu ke4 IRC}
+\centering
+\begin{tabular}{|c|c|l|}
+\hline
+No&Tanggal&Kegiatan\\
+\hline
+1.&\multirow{2}{*}{25-03-2019}
+&DEDIKASI :- \\
+&&PRODUKTIF :masuk kelas dan memberi nilai\\
+&&INTEGRITAS :-\\
+&&DISIPLIN : Jam Datang 8.52 Jam Pulang 16:00\\
+&&LOYALITAS :Merapihkan kan tempat\\
+\hline
+\hline
+2.&\multirow{2}{*}{25-03-2019}
+&DEDIKASI :pull gis2019 \\
+&&PRODUKTIF :masuk kelas3C dan memberi nilai\\
+&&INTEGRITAS :able to marge\\
+&&DISIPLIN : Jam Datang 8.45 Jam Pulang 16:00\\
+&&LOYALITAS :Merapihkan kan tempat tanggung jawab di irc\\
+\hline
+3.&\multirow{2}{*}{26-03-2019}
+&DEDIKASI :- \\
+&&PRODUKTIF :belajar teori dari jurnal\\
+&&INTEGRITAS :-\\
+&&DISIPLIN : jam datang 8.58 jam pulang 12.28 setengah hari\\
+&&LOYALITAS :-\\
+\hline
+4.&\multirow{2}{*}{27-03-2019}
+&DEDIKASI :- \\
+&&PRODUKTIF :-\\
+&&INTEGRITAS :-\\
+&&DISIPLIN : -\\
+&&LOYALITAS :-\\
+\hline
+5.&\multirow{2}{*}{28-03-2019}
+&DEDIKASI :- \\
+&&PRODUKTIF :-\\
+&&INTEGRITAS :-\\
+&&DISIPLIN : -\\
+&&LOYALITAS :-\\
+\hline
+\end{tabular}
+\label{table:contoh}
+\end{table}
+
+\begin{table}[h]
+\begin{center}
+\caption{Tabel Mingguan}
+\begin{tabular}{|c|l|}
+\hline
+Kategori& Sekor Nilai Kategori mingguan\\
+\hline
+Dedikasi & -\\
+\hline
+Produktif & -\\
+\hline
+Integritas & -\\
+\hline
+Disiplin & -\\
+\hline
+Loyalitas & -\\
+\hline
+\end{tabular}
+\end{center}
+\label {Tabel:contoh} 
+\end{table}
+
+\begin{table}[h]
+\caption{Tabel Kegiatan Harian minggu ke5 IRC}
+\centering
+\begin{tabular}{|c|c|l|}
+\hline
+No&Tanggal&Kegiatan\\
+\hline
+1.&\multirow{2}{*}{01-04-2019}
+&DEDIKASI :-\\
+&&PRODUKTIF :pelatihan mengenai flask di IRC\\
+&&dan pengambilan data EEG\\
+&&INTEGRITAS :-\\
+&&DISIPLIN : Jam Datang 8.52 Jam Pulang 16:00\\
+&&LOYALITAS :Merapihkan kan tempat duduk\\
+\hline
+\end{tabular}
+\label{table:contoh}
+\end{table}
+
+
+\begin{table}[h]
+\begin{center}
+\caption{Tabel Mingguan}
+\begin{tabular}{|c|l|}
+\hline
+Kategori& Sekor Nilai Kategori mingguan\\
+\hline
+Dedikasi & -\\
+\hline
+Produktif & -\\
+\hline
+Integritas & -\\
+\hline
+Disiplin & -\\
+\hline
+Loyalitas & -\\
+\hline
+\end{tabular}
+\end{center}
+\label {Tabel:contoh} 
 \end{table}
