menambah tugas harian

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -1253,6 +1253,59 @@
 \item Mencuci gelas
 \item Membeli batre untuk jam dinding di IRC
 \end{enumerate}
+
+
+\item \textbf{Tugas Harian tanggal 02/04/2019}
+\begin{enumerate}
+\item Menambah materi mengenai Map File \#50
+\item Melakukan pengambilan dataset kembali untuk EEG pada kondisi mengendarai motor
+\item Mengikuti pelatihan python flask
+\item Menambah data hasil rekaman \#3
+\item Membuat paper mengenai metode ICA 
+\item Upload Metode ICA' (gitlab)
+\item Memerge tugas chapter 6 kelas 3c pada hari selasa malam (AIP SUPRAPTO MUNARI 1164063)
+\item Memerge tugas chapter 5 repository kelas 2b grup1
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai Map File \#50
+\item Menambah data hasil rekaman \#3
+\item Upload Metode ICA' (gitlab)
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi mengenai Map File \#50
+\item Melakukan pengambilan dataset kembali untuk EEG pada kondisi mengendarai motor
+\item Mengikuti pelatihan python flask
+\item Menambah data hasil rekaman \#3
+\item Membuat paper mengenai metode ICA 
+\item Upload Metode ICA' (gitlab)
+\item Memerge tugas chapter 6 kelas 3c pada hari selasa malam (AIP SUPRAPTO MUNARI 1164063)
+\item Memerge tugas chapter 5 repository kelas 2b grup1
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.30
+\item Jam Keluar : 18.00
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
+\end{enumerate}
+
 \end{enumerate}
 
 
