update laporan harian tgl 2 dan 4 april 2019

--- a/section/chapter6.tex
+++ b/section/chapter6.tex
@@ -888,49 +888,23 @@
 \multicolumn{1}{|c|}{\multirow{1}{*}{1}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Dedikasi}}}
 & BukuInformatika/flask \#35\\
 \hline
-\multicolumn{1}{|c|}{\multirow{2}{*}{2}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Produktifitas}}}
-& -\\
+\multicolumn{1}{|c|}{\multirow{5}{*}{2}} & \multicolumn{1}{c|}{\multirow{5}{*}{\parbox{2.5cm}{Produktifitas}}}
+& a. Masuk kelas Kecerdasan Buatan 3C\\
 \multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
-& -\\
+& b. Menilai presentasi Chapter 2 dan 3, M. Fahmi Kelas 2A pada mata kuliah Pemrograman 3 Kelas 2A\\
+\multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
+& c. Mencari dan mengolah jurnal untuk membuat introduction - kecelakaan kendaan bermotor\\
 \hline
 \multicolumn{1}{|c|}{\multirow{1}{*}{3}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Integritas}}}
 & \textit{able to merge/has no conflict} \\
 \hline
 \multicolumn{1}{|c|}{\multirow{2}{*}{4}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Disiplin}}}
-& Jam Datang : - \\
+& Jam Datang : 08.25 WIB. \\
 \multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
-& Jam Pulang : - \\
+& Jam Pulang : 18.00 WIB.\\
 \hline
 \multicolumn{1}{|c|}{\multirow{2}{*}{5}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Loyalitas}}}
 & Menyapu, membersihkan dan merapihkan meja, juga mengecek AC di pagi dan sore hari.\\
-\hline
-\end{tabularx}
-\end{center}
-\end{table}
-
-\begin{table}[htp]
-\begin{center}
-\caption{Laporan Harian : Rabu, 3 April 2019}
-\label{tab:lh030419}
-\begin{tabularx}{\textwidth}{|l|l|X|}
-\hline
-\multicolumn{1}{|c|}{\textbf{No}} & \multicolumn{1}{c|}{\textbf{Kategori}} & \textbf{Keterangan} \\ \hline
-\multicolumn{1}{|c|}{\multirow{1}{*}{1}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Dedikasi}}}
-& BukuInformatika/flask \#-\\
-\hline
-\multicolumn{1}{|c|}{\multirow{2}{*}{2}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Produktifitas}}}
-& -\\
-\hline
-\multicolumn{1}{|c|}{\multirow{1}{*}{3}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Integritas}}}
-& \textit{able to merge/has no conflict} \\
-\hline
-\multicolumn{1}{|c|}{\multirow{2}{*}{4}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Disiplin}}}
-& Jam Datang : - \\
-\multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
-& Jam Pulang : - \\
-\hline
-\multicolumn{1}{|c|}{\multirow{1}{*}{5}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Loyalitas}}}
-& -\\
 \hline
 \end{tabularx}
 \end{center}
@@ -944,21 +918,27 @@
 \hline
 \multicolumn{1}{|c|}{\textbf{No}} & \multicolumn{1}{c|}{\textbf{Kategori}} & \textbf{Keterangan} \\ \hline
 \multicolumn{1}{|c|}{\multirow{1}{*}{1}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Dedikasi}}}
-& BukuInformatika/flask \#-\\
+& BukuInformatika/flask \#36\\
 \hline
-\multicolumn{1}{|c|}{\multirow{2}{*}{2}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Produktifitas}}}
-& -\\
+\multicolumn{1}{|c|}{\multirow{8}{*}{2}} & \multicolumn{1}{c|}{\multirow{8}{*}{\parbox{2.5cm}{Produktifitas}}}
+& a. Merge tugas syarahulyaa/praktikum\_ai dan pemrograman-iii/2a\_grup1\\
+\multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
+& b. Menilai presentasi Chapter 2 dan 3, Habib A. Rasyid pada mata kuliah Pemrograman 3 Kelas 2A\\
+\multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
+& c. Menilai presentasi Chapter 2 dan 3, Habib A. Rasyid pada mata kuliah Pemrograman 3 Kelas 2A\\
+\multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
+& d. Memperbarui tutorial langkah-langkah pull request di papan tulis.\\
 \hline
 \multicolumn{1}{|c|}{\multirow{1}{*}{3}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Integritas}}}
 & \textit{able to merge/has no conflict} \\
 \hline
 \multicolumn{1}{|c|}{\multirow{2}{*}{4}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Disiplin}}}
-& Jam Datang : - \\
+& Jam Datang : 08.30 WIB. \\
 \multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
-& Jam Pulang : - \\
+& Jam Pulang : 15.30 WIB.\\
 \hline
-\multicolumn{1}{|c|}{\multirow{1}{*}{5}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Loyalitas}}}
-& -\\
+\multicolumn{1}{|c|}{\multirow{3}{*}{5}} & \multicolumn{1}{c|}{\multirow{3}{*}{\parbox{2.5cm}{Loyalitas}}}
+& Menyapu, membersihkan dan merapihkan meja, mencuci gelas-gelas dan mangkuk, juga mengecek AC di pagi dan sore hari.\\
 \hline
 \end{tabularx}
 \end{center}
