--- a/section/chapter9.tex
+++ b/section/chapter9.tex
@@ -244,3 +244,19 @@
 5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang  \\ \hline
 \end{tabular}
 \end{table}
+
+
+\begin{table}[htp]
+\caption{Laporan Harian Tanggal 04 April 2019}
+\label{tab:lh040419}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi & - BukuInformatika/ DeepLearningComputerVision \\ \hline
+2 & Produktifitas & Pelatihan, Belajar  \\
+3 & Integritas & able to merge \\ \hline
+4 & Disiplin & Jam Datang : 09.40 WIB \\
+ &  & Jam Pulang : 15.45 WIB \\ \hline
+5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang  \\ \hline
+\end{tabular}
+\end{table}
