--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -1306,6 +1306,49 @@
 \item Membersihkan area belakang IRC
 \end{enumerate}
 
+\item \textbf{Tugas Harian tanggal 04/04/2019}
+\begin{enumerate}
+\item Memerge tugas mata kuliah pemrograman III kelas 2b (repository 2b grup1)
+\item Memerge tugas chapter 6 bagian praktek mata kuliah kecerdasan buatan kelas 3c (AIP SUPRAPTO MUNARI 1164063, ANDI MUH ASLAM 1164064)
+\item Menambah materi mengenai Map File \#51
+\item Memeriksa tugas chapter 5 mata kuliah kecerdasan buatan kelas 3c (AIP SUPRAPTO MUNARI 1164063, ANDI MUH ASLAM 1164064)
+\item Menginput tugas chapter 5 mata kuliah kecerdasan buatan kelas 3c (AIP SUPRAPTO MUNARI 1164063, ANDI MUH ASLAM 1164064) 
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai Map File \#51
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Memerge tugas mata kuliah pemrograman III kelas 2b (repository 2b grup1)
+\item Memerge tugas chapter 6 bagian praktek mata kuliah kecerdasan buatan kelas 3c (AIP SUPRAPTO MUNARI 1164063, ANDI MUH ASLAM 1164064)
+\item Menambah materi mengenai Map File \#51
+\item Memeriksa tugas chapter 5 mata kuliah kecerdasan buatan kelas 3c (AIP SUPRAPTO MUNARI 1164063, ANDI MUH ASLAM 1164064)
+\item Menginput tugas chapter 5 mata kuliah kecerdasan buatan kelas 3c (AIP SUPRAPTO MUNARI 1164063, ANDI MUH ASLAM 1164064) 
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.30
+\item Jam Keluar : 16.40
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
+\item Membersihkan area sidang IRC
+\end{enumerate}
 \end{enumerate}
 
 
