--- a/section/chapter7.tex
+++ b/section/chapter7.tex
@@ -251,4 +251,34 @@
 \end{tabular}
 \end{table}
 
+\begin{table}[htp]
+\caption{Laporan Harian Tanggal 3 April 2019}
+\label{tab:lh030419}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi & BukuInformatika/DeepLearningComputerVision\#26  \\ \hline
+2 & Produktifitas & Liburan \\ \hline
+3 & Integritas & able to merge \\ \hline
+4 & Disiplin & Jam Datang : - \\
+ &  & Jam Pulang : - \\ \hline
+5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang  \\ \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[htp]
+\caption{Laporan Harian Tanggal 4 April 2019}
+\label{tab:lh040419}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi & BukuInformatika/DeepLearningComputerVision\#30  \\ \hline
+2 & Produktifitas & bimbingan internship, persentase kelas 2A \\ \hline
+3 & Integritas & able to merge \\ \hline
+4 & Disiplin & Jam Datang : 09.00 WIB \\
+ &  & Jam Pulang : 15.00 WIB \\ \hline
+5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang  \\ \hline
+\end{tabular}
+\end{table}
+
 
