menambah tugas harian

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -1395,6 +1395,55 @@
 \item Membersihkan area belakang IRC
 \item Membersihkan area sidang IRC
 \end{enumerate}
+
+\item \textbf{Tugas Harian tanggal 08/04/2019}
+\begin{enumerate}
+\item Menambah materi mengenai Map File \#53
+\item Membuat form penilaian mata kuliah kecerdasan buatan kelas 3c
+\item Memeriksa tugas chapter 6 mata kuliah kecerdasan buatan kelas 3c (AIP SUPRAPTO MUNARI 1164063, ANDI MUH ASLAM 1164064)
+\item Menginput nilai tugas chapter 6 mata kuliah kecerdasan buatan kelas 3c (AIP SUPRAPTO MUNARI 1164063, ANDI MUH ASLAM 1164064)
+\item Membuat form penilaian chapter 4 untuk kelas 2b
+\item Memeriksa tugas chapter 4 mata kuliah pemrograman III kelas 2b (repository tugas grup1)
+\item Menginput nilai tugas chapter 4 mata kuliah pemrograman III kelas 2b (repository tugas grup1)
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai Map File \#53
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi mengenai Map File \#53
+\item Membuat form penilaian mata kuliah kecerdasan buatan kelas 3c
+\item Memeriksa tugas chapter 6 mata kuliah kecerdasan buatan kelas 3c (AIP SUPRAPTO MUNARI 1164063, ANDI MUH ASLAM 1164064)
+\item Menginput nilai tugas chapter 6 mata kuliah kecerdasan buatan kelas 3c (AIP SUPRAPTO MUNARI 1164063, ANDI MUH ASLAM 1164064)
+\item Membuat form penilaian chapter 4 untuk kelas 2b
+\item Memeriksa tugas chapter 4 mata kuliah pemrograman III kelas 2b (repository tugas grup1)
+\item Menginput nilai tugas chapter 4 mata kuliah pemrograman III kelas 2b (repository tugas grup1)
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.30
+\item Jam Keluar : 16.40
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
+\item Membersihkan area sidang IRC
+\item Mencuci gelas
+\end{enumerate}
 \end{enumerate}
 
 
