menambah tugas harian

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -1444,6 +1444,52 @@
 \item Membersihkan area sidang IRC
 \item Mencuci gelas
 \end{enumerate}
+
+
+\item \textbf{Tugas Harian tanggal 09/04/2019}
+\begin{enumerate}
+\item Menambah materi mengenai Map File \#54
+\item Masuk kelas mata kuliah kecerdasan buatan 
+\item Mengambil kembali data set pada kondisi naik kendaraan bermotor
+\item Membuat form penilaian chapter 5 dan 6 nata kuliah pemrograman III kelas 2b
+\item Memeriksa sebagian chaper 5 mata kuliah pemrograman III kelas 2b (repository tugas grup1) 
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai Map File \#54
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi mengenai Map File \#54
+\item Masuk kelas mata kuliah kecerdasan buatan 
+\item Mengambil kembali data set pada kondisi naik kendaraan bermotor
+\item Membuat form penilaian chapter 5 dan 6 nata kuliah pemrograman III kelas 2b
+\item Memeriksa sebagian chaper 5 mata kuliah pemrograman III kelas 2b (repository tugas grup1) 
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.30
+\item Jam Keluar : 17.00
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
+\item Membersihkan area sidang IRC
+\item Mencuci gelas
+\end{enumerate}
 \end{enumerate}
 
 
@@ -1471,7 +1517,7 @@ Loyalitas & 3 \\
 \end{table}
 
 \section{Score Mingguan dari tanggal 04/03/2019 sampai 08/03/2019}
-Total score mingguan adalah 15,  keterangan seperti pada Tabel \ref{table:scoremingguan}.
+Total score mingguan adalah 15,  keterangan seperti pada Tabel \ref{table:scoremingguan2}.
 \begin{table}[!ht]
 \centering
 \begin{tabular}{ |c|c|c|c|c|c|c|c|c|c| }
@@ -1490,14 +1536,14 @@ Loyalitas & 3 \\
 \hline
 \end{tabular}
 \caption{Tabel Score Mingguan}
-\label{table:scoremingguan}
+\label{table:scoremingguan2}
 \end{table}
 
 
 
 
 \section{Score Mingguan dari tanggal 11/03/2019 sampai 15/03/2019}
-Total score mingguan adalah 15,  keterangan seperti pada Tabel \ref{table:scoremingguan}.
+Total score mingguan adalah 15,  keterangan seperti pada Tabel \ref{table:scoremingguan3}.
 \begin{table}[!ht]
 \centering
 \begin{tabular}{ |c|c|c|c|c|c|c|c|c|c| }
@@ -1516,12 +1562,12 @@ Loyalitas & 3 \\
 \hline
 \end{tabular}
 \caption{Tabel Score Mingguan}
-\label{table:scoremingguan}
+\label{table:scoremingguan3}
 \end{table}
 
 
 \section{Score Mingguan dari tanggal 18/03/2019 sampai 22/03/2019}
-Total score mingguan adalah 15,  keterangan seperti pada Tabel \ref{table:scoremingguan}.
+Total score mingguan adalah 15,  keterangan seperti pada Tabel \ref{table:scoremingguan4}.
 \begin{table}[!ht]
 \centering
 \begin{tabular}{ |c|c|c|c|c|c|c|c|c|c| }
@@ -1540,13 +1586,13 @@ Loyalitas & 3 \\
 \hline
 \end{tabular}
 \caption{Tabel Score Mingguan}
-\label{table:scoremingguan}
+\label{table:scoremingguan4}
 \end{table}
 
 
 
-\section{Score Mingguan dari tanggal 25/03/2019 sampai 01/04/2019}
-Total score mingguan adalah 15,  keterangan seperti pada Tabel \ref{table:scoremingguan}.
+\section{Score Mingguan dari tanggal 25/03/2019 sampai 29/03/2019}
+Total score mingguan adalah 15,  keterangan seperti pada Tabel \ref{table:scoremingguan5}.
 \begin{table}[!ht]
 \centering
 \begin{tabular}{ |c|c|c|c|c|c|c|c|c|c| }
@@ -1565,6 +1611,30 @@ Loyalitas & 3 \\
 \hline
 \end{tabular}
 \caption{Tabel Score Mingguan}
-\label{table:scoremingguan}
+\label{table:scoremingguan5}
 \end{table}
 
+
+
+\section{Score Mingguan dari tanggal 01/04/2019 sampai 05/04/2019}
+Total score mingguan adalah 15,  keterangan seperti pada Tabel \ref{table:scoremingguan6}.
+\begin{table}[!ht]
+\centering
+\begin{tabular}{ |c|c|c|c|c|c|c|c|c|c| }
+\hline
+Kategori & Keterangan Nilai \\
+\hline
+Dedikasi & 3 \\
+\hline
+Produktif & 3 \\
+\hline
+Integritas & 3 \\
+\hline
+Disiplin & 3 \\
+\hline
+Loyalitas & 3 \\
+\hline
+\end{tabular}
+\caption{Tabel Score Mingguan}
+\label{table:scoremingguan6}
+\end{table}
