menambah tugas harian

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -1490,6 +1490,53 @@
 \item Membersihkan area sidang IRC
 \item Mencuci gelas
 \end{enumerate}
+
+\item \textbf{Tugas Harian tanggal 10/04/2019}
+\begin{enumerate}
+\item Mengedit code mindwave.py dan menambah hasil rekamannya dalam format csv \#4
+\item Memerge tugas chapter 6 mata kuliah pemrograman III kelas 2b (repository tugas grup1)
+\item Memerge tugas chapter 7 mata kuliah kecerdasan buatan kelas 3c  (AIP SUPRAPTO MUNARI 1164063, ANDI MUH ASLAM 1164064)
+\item Mengambil kembali data set pada kondisi naik sepeda motor
+\item Memperhatikan presentasi tugas mata kuliah pemrograman III chapter 4 dan 5 Faisal Najib Abdullah kelas 2b
+\item Memprint FM02 TA
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Mengedit code mindwave.py dan menambah hasil rekamannya dalam format csv \#4
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Mengedit code mindwave.py dan menambah hasil rekamannya dalam format csv \#4
+\item Memerge tugas chapter 6 mata kuliah pemrograman III kelas 2b (repository tugas grup1)
+\item Memerge tugas chapter 7 mata kuliah kecerdasan buatan kelas 3c  (AIP SUPRAPTO MUNARI 1164063, ANDI MUH ASLAM 1164064)
+\item Mengambil kembali data set pada kondisi naik sepeda motor
+\item Memperhatikan presentasi tugas mata kuliah pemrograman III chapter 4 dan 5 Faisal Najib Abdullah kelas 2b
+\item Memprint FM02 TA
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.30
+\item Jam Keluar : 17.00
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
+\item Membersihkan area sidang IRC
+\item Mencuci gelas
+\end{enumerate}
 \end{enumerate}
 
 
