menambah tugas harian

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -1537,6 +1537,54 @@
 \item Membersihkan area sidang IRC
 \item Mencuci gelas
 \end{enumerate}
+
+\item \textbf{Tugas Harian tanggal 11/04/2019}
+\begin{enumerate}
+\item Menambah materi mengenai Map File \#55
+\item Memerge tugas chapter 6 kelas 2b mata kuliah pemrograman III (repository tugas grup1)
+\item Mengambil kembali datasset untuk EEG pada kondisi mengendarai sepeda motor
+\item Memperhatikan presentasi chapter 2, 3, 4, 6 mata kuliah pemrograman III kelas 2b (Hagan Rowlenstino)
+\item Menginput nilai hasil presentasi mata kuliah pemrograman III kelas 2b
+\item Meminta ttd pembimbing dan koordinator TA untuk FM02 
+\item Mengambil kembali datasset untuk EEG pada kondisi mengendarai sepeda motor
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai Map File \#55
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi mengenai Map File \#55
+\item Memerge tugas chapter 6 kelas 2b mata kuliah pemrograman III (repository tugas grup1)
+\item Mengambil kembali datasset untuk EEG pada kondisi mengendarai sepeda motor
+\item Memperhatikan presentasi chapter 2, 3, 4, 6 mata kuliah pemrograman III kelas 2b (Hagan Rowlenstino)
+\item Menginput nilai hasil presentasi mata kuliah pemrograman III kelas 2b
+\item Meminta ttd pembimbing dan koordinator TA untuk FM02 
+\item Mengambil kembali datasset untuk EEG pada kondisi mengendarai sepeda motor
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.30
+\item Jam Keluar : 18.00
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
+\item Membersihkan area sidang IRC
+\end{enumerate}
 \end{enumerate}
 
 
