--- a/section/chapter8.tex
+++ b/section/chapter8.tex
@@ -358,3 +358,34 @@
 \end{tabular}
 \end{table}
 
+\begin{table}[htp]
+\caption{Laporan Harian Tanggal 10 April 2019}
+\label{tab:lh100419}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi & - \\ \hline
+2 & Produktifitas & a.Mengerjakan project PHP7 \\
+   & & b.mengerjakan laporan intrenship 2 \\ \hline
+3 & Integritas & able to merge \\ \hline
+4 & Disiplin & Jam Datang : 09:00 WIB \\
+   &  & Jam Pulang : 15:00 \\ \hline
+5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang \\ \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[htp]
+\caption{Laporan Harian Tanggal 11 April 2019}
+\label{tab:lh110419}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi & - \\ \hline
+2 & Produktifitas & a.Mengerjakan project PHP7 \\
+   & & b.mengambil data eeg \\ \hline
+3 & Integritas & able to merge \\ \hline
+4 & Disiplin & Jam Datang : 09:15 WIB \\
+   &  & Jam Pulang : 15:00 \\ \hline
+5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang \\ \hline
+\end{tabular}
+\end{table}
