--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -1636,6 +1636,107 @@
 \item Membersihkan area sidang IRC
 \item Mencuci gelas
 \end{enumerate}
+
+
+\item \textbf{Tugas Harian tanggal 15/04/2019}
+\begin{enumerate}
+\item Menambah data hasil perekaman \#5
+\item Memperhatikan presentasi chapter 5 mata kuliah pemrograman III kelas 2b (Faisal Najib Abdullah)
+\item Membuat form penilaian chapter kelas 2b
+\item Menginput nilai hasil presentasi mata kuliah pemrograman III kelas 2b
+\item Memeriksa tugas chapter kelas 2b pada repository grup 1
+\item Memeriksa tugas chapter kelas 3c  (AIP SUPRAPTO MUNARI, ANDI MUH ASLAM)
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah data hasil perekaman \#5
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah data hasil perekaman \#5
+\item Memperhatikan presentasi chapter 5 mata kuliah pemrograman III kelas 2b (Faisal Najib Abdullah)
+\item Membuat form penilaian chapter kelas 2b
+\item Menginput nilai hasil presentasi mata kuliah pemrograman III kelas 2b
+\item Memeriksa tugas chapter kelas 2b pada repository grup 1
+\item Memeriksa tugas chapter kelas 3c  (AIP SUPRAPTO MUNARI, ANDI MUH ASLAM)
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.30
+\item Jam Keluar : 18.00
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
+\item Membersihkan area sidang IRC
+\item Mencuci gelas
+\end{enumerate}
+
+
+
+\item \textbf{Tugas Harian tanggal 16/04/2019}
+\begin{enumerate}
+\item Menambah materi mengenai Map File \#57
+\item Memperhatikan presentasi chapter 5 mata kuliah pemrograman III kelas 2b (Faisal Najib Abdullah)
+\item Membuat form penilaian chapter kelas 2b
+\item Menginput nilai hasil presentasi mata kuliah pemrograman III kelas 2b
+\item Memeriksa tugas chapter kelas 2b pada repository grup 1
+\item Memeriksa tugas chapter kelas 3c  (AIP SUPRAPTO MUNARI, ANDI MUH ASLAM)
+\item Memperhatikan presentasi mata kuliah kecerdasan kelas 3cb(AIP SUPRAPTO MUNARI)
+\item Membuat form penilaian mata kuliah kecerdasan buatan kelas 3c 
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai Map File \#57
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi mengenai Map File \#57
+\item Memperhatikan presentasi chapter 5 mata kuliah pemrograman III kelas 2b (Faisal Najib Abdullah)
+\item Membuat form penilaian chapter kelas 2b
+\item Menginput nilai hasil presentasi mata kuliah pemrograman III kelas 2b
+\item Memeriksa tugas chapter kelas 2b pada repository grup 1
+\item Memeriksa tugas chapter kelas 3c  (AIP SUPRAPTO MUNARI, ANDI MUH ASLAM)
+\item Memperhatikan presentasi mata kuliah kecerdasan kelas 3c (AIP SUPRAPTO MUNARI)
+\item Membuat form penilaian chapter mata kuliah kecerdasan buatan kelas 3c 
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.30
+\item Jam Keluar : 19.00
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
+\item Membersihkan area sidang IRC
+\item Mencuci gelas
+\end{enumerate}
 \end{enumerate}
 
 
