--- a/section/chapter9.tex
+++ b/section/chapter9.tex
@@ -336,3 +336,48 @@
 5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang  \\ \hline
 \end{tabular}
 \end{table}
+
+\begin{table}[htp]
+\caption{Laporan Harian Tanggal 15 April 2019}
+\label{tab:lh150419}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi & - BukuInformatika/ DeepLearningComputerVision \\ \hline
+2 & Produktifitas &  perentasi kels 2C  \\
+3 & Integritas & able to merge \\ \hline
+4 & Disiplin & Jam Datang : 08.45 WIB \\
+ &  & Jam Pulang : 15.00 WIB \\ \hline
+5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang  \\ \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[htp]
+\caption{Laporan Harian Tanggal 16 April 2019}
+\label{tab:lh160419}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi & - BukuInformatika/ DeepLearningComputerVision \\ \hline
+2 & Produktifitas & Belajar  \\
+3 & Integritas & able to merge \\ \hline
+4 & Disiplin & Jam Datang : 08.45 WIB \\
+ &  & Jam Pulang : 16.00 WIB \\ \hline
+5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang  \\ \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[htp]
+\caption{Laporan Harian Tanggal 22 April 2019}
+\label{tab:lh220419}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi & - BukuInformatika/ DeepLearningComputerVision \\ \hline
+2 & Produktifitas & Belajar, Presentasi kels 2C  \\
+3 & Integritas & able to merge \\ \hline
+4 & Disiplin & Jam Datang : 09.45 WIB \\
+ &  & Jam Pulang : 15.00 WIB \\ \hline
+5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang  \\ \hline
+\end{tabular}
+\end{table}
